Fixed a few spacing issues

--- a/links/main.css
+++ b/links/main.css
@@ -1,16 +1,16 @@
-body { background:black; font-family: 'pt_mono',monospace;}
+body { background:black; font-family: 'pt_mono',monospace; min-width:750px;}
 
 #wrapper { display: block;max-width: 900px; height: calc(25vw * 1.25 + 90px);max-height:400px;margin:50px auto;position: relative;width: calc(100% - 60px)}
 
-#player { display: block; font-size:16px; border-bottom:1px solid #333; height:40px; line-height:24px;}
-#player .gage { width: 140px;display: block;color: white;height:40px;position: relative; float:right;}
-#player .gage .value { display: inline-block;line-height:24px;}
+#player { display: block; font-size:12px; border-bottom:1px solid #333; height:30px; line-height:20px; max-width:890px;}
+#player .gage { width: 140px;display: block;color: white;height:30px;position: relative; float:right;}
+#player .gage .value { display: inline-block;line-height:20px;}
 #player .gage .value .unit { color:#999; padding-left:5px;}
 #player .gage .event { display: inline-block;line-height:24px; padding-left:5px;}
 #player .gage .progress { display:block !important; height:1px; width:140px; position:absolute; bottom:-1px;}
 #player .gage .progress .bar{ height:1px; display:block !important;}
-#player a.escape { background: #fff;padding: 2px 10px;border-radius: 20px;display: inline-block;margin-right: 10px;line-height: 24px}
-#player a.escape:hover { cursor:pointer; border:2px solid white; padding:0px 8px; background:none; color:white;}
+#player a.escape { background: #fff;padding: 0px 8px;border-radius: 20px;display: inline-block;margin-right: 10px;line-height: 20px; border:2px solid black; margin-top:-2px;}
+#player a.escape:hover { cursor:pointer; border:2px solid white; padding:0px 8px; background:none; color:white; }
 #player div.timeline { display: inline-block;color:white;}
 
 #player.locked a.escape { display:none;}
@@ -37,7 +37,7 @@ body { background:black; font-family: 'pt_mono',monospace;}
 
 .card_11 .face .name,.card_13 .face .name,.card_15 .face .name,.card_17 .face .name { color:white;}
 
-#tips { color: #555;position: absolute;bottom:0px;font-size: 12px;}
+#tips { color: #555;position: absolute;bottom:0px;font-size: 12px; width:100%;max-width:900px}
 #tips .key { color:#999; }
 #tips a:hover { color:white;}
 
